fixes overflow bug in zoo

--- a/content/main.css
+++ b/content/main.css
@@ -219,7 +219,7 @@ p{
 }
 
 .theZoo {
-	height: 100%;
+	height: calc(100% - 48px);
     overflow-y: auto;
 }
 
